--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,29 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-integration</artifactId>
 		</dependency>
-      <dependency>
-         <groupId>org.springframework.integration</groupId>
-      </dependency>
 		<dependency>
-         <groupId>commons-io</groupId>
-         <artifactId>spring-integration-java-dsl</artifactId>
-         <artifactId>commons-io</artifactId>
-         <version>${commons-io-version}</version>
-      </dependency>
-      <dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-file</artifactId>
+		</dependency>
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+		    <artifactId>spring-integration-java-dsl</artifactId>
+		    <version>1.2.2.RELEASE</version>
+        </dependency>
+		<dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io-version}</version>
+        </dependency>
+        <dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>1.0.0.GA</version>
 		</dependency>
 
 		<dependency>
