--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
 		    <version>1.2.2.RELEASE</version>
         </dependency>
 		<dependency>
+		    <groupId>org.springframework.integration</groupId>
+		    <artifactId>spring-integration-sftp</artifactId>
+		</dependency>
+
+		<dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io-version}</version>
