--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 fs-assistant:
 
   volumes:
-    transferSource:
+    raspberryVideo:
       type: sftp
       path: /media/pi/video
       host:
@@ -10,14 +10,31 @@ fs-assistant:
       user:
       private-key:
       private-key-passphrase:
-    transferDest:
+      # password is optional if no private-key & passphrase were used
+      password:
+    localVideo:
       type: local
       path: /home/dlink/ftp/files/raspberry
     folderCleanup:
       type: local
       path: /home/dlink/ftp/files/
 
-  file-transfer:
+  file-uploader:
+    task:
+      # we don't really need it so for, TODO: test it out
+      force-suspend: true
+    source-volume:
+      volume-ref: localVideo
+      auto-create-directory: true
+    target-volume:
+      volume-ref: some-other-volume-here
+      file-extensions:
+      - *.*
+      delete-source-files: true
+    # channel is not of interest to end user
+    channel: uploadFilesChannel
+
+  file-downloader:
     task:
       # Order: <second> <minute> <hour> <day-of-month> <month> <day-of-week> <year>
       cron: 0 0/15 * * * * *
@@ -25,14 +42,17 @@ fs-assistant:
       simulation-mode: false
       debug-logger-level: false
     source-volume:
-      volumeRef: transferSource
+      # must be a remote folder (*file downloader*)
+      volume-ref: raspberryVideo
       file-extensions:
         - *.h264
-      delete-remote-files: true
+      delete-source-files: true
     target-volume:
-      volumeRef: transferDest
+      # must be a local folder (*file downloader*)
+      volume-ref: localVideo
+      auto-create-directory: true
     # channel is not of interest to end user
-    channel: filesTransferChannel
+    channel: downloadFilesChannel
 
   folder-cleaner:
     task:
@@ -41,10 +61,11 @@ fs-assistant:
       force-suspend: false
       simulation-mode: false
       debug-logger-level: false
+    # source-volume doesn't make sense to cleaner task
     target-volume:
-      volumeRef: folderCleanup
+      volume-ref: folderCleanup
       file-extensions:
         - *.h264
         - *.avi
     # channel is not of interest to end user
-    channel: folderCleanerChannel
+    channel: folderCleanupChannel
