Final still-untested refactoring. Added SftpToLocalPipe class to integration package to show how an end-to-end pipe could be defined, besides isolated integration components that could be used as part of another custom pipe.
Pending: Separate integration package on a different client-module so all the other assets are understood as reusable and not prone to change.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,11 +49,11 @@ fs-assistant:
       volume-ref: raspberryVideo
       file-extensions:
         - *.h264
-      delete-source-files: true
     target-volume:
       # must be a local folder (*file downloader*)
       volume-ref: localVideo
       auto-create-directory: true
+      delete-source-files: true
 
   # remote to remote
   file-transfer:
@@ -84,3 +84,22 @@ fs-assistant:
       file-extensions:
         - *.h264
         - *.avi
+
+  fs-assistant.move-from-sftp-to-local-pipe:
+    task:
+      # Order: <second> <minute> <hour> <day-of-month> <month> <day-of-week> <year>
+      cron: 0 0/15 * * * * *
+      force-suspend: false
+      simulation-mode: false
+      debug-logger-level: false
+      channel: downloadFilesChannel
+    source-volume:
+      # must be a remote folder (*file downloader*)
+      volume-ref: raspberryVideo
+      file-extensions:
+      - *.h264
+    target-volume:
+      # must be a local folder (*file downloader*)
+      volume-ref: localVideo
+      auto-create-directory: true
+      delete-source-files: true
