--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
 		    <groupId>org.springframework.integration</groupId>
 		    <artifactId>spring-integration-sftp</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-jmx</artifactId>
+		</dependency>
 
 		<dependency>
             <groupId>commons-io</groupId>
