Usesless JMX that have no work so far, so moving on to other topic by the moment.
Pending: SFTP pipes (sources and sinks).
Pending: Separate integration package on a different client-module so all the other assets are understood as reusable and not prone to change.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 
+spring:
+  application:
+    admin:
+      enabled: true
+
 fs-assistant:
 
   volumes:
@@ -7,7 +12,7 @@ fs-assistant:
       path: /somePath
     folderCleanup:
       type: local
-      path: C:\Users\me\Documents\test\cleanup
+      path: C:\Users\LennarthAnaya\Documents\zdata\tmp\test\cleanup
 
   pipes:
     local-cleanup-pipe:
