--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,13 +8,23 @@ fs-assistant:
     folderCleanup:
       type: local
       path: C:\Users\me\Documents\test\cleanup
+    remoteSftp:
+      type: sftp
+      path: ./test
+      host: localhost
+      port: 22
+      user: lanaya
+      private-key: C:\Users\me\.ssh\id_sftptest_rsa
+      private-key-passphrase: password
+      # password is optional if no private-key & passphrase were used
+      # password:
 
   pipes:
     local-cleanup-pipe:
       task:
         # Order: <second> <minute> <hour> <day-of-month> <month> <day-of-week> <year>
         cron: 0/30 * * * * *
-        force-suspend: false
+        force-suspend: true
         simulation-mode: false
         max-messages-per-poll: 30
       # target-volume is not necessary to cleaner task
@@ -30,3 +40,24 @@ fs-assistant:
           file-extensions:
           - "*.h264"
           - "*.avi"
+    move-from-sftp-to-local-pipe:
+      task:
+        # Order: <second> <minute> <hour> <day-of-month> <month> <day-of-week> <year>
+        cron: 0/30 * * * * *
+        force-suspend: false
+        simulation-mode: false
+        max-messages-per-poll: 30
+      source-volume-meta:
+        volume-ref: remoteSftp
+        delete-source-files: true
+        filter:
+          # 172800 seconds = 2 days
+          # file-modification-min-age-seconds: 172800
+          file-modification-min-age-seconds: 120
+          file-extensions:
+          - "*.h264"
+          - "*.avi"
+      target-volume-meta:
+        # must be a local folder (*file downloader*)
+        volume-ref: folderCleanup
+        auto-create-directory: true
